# ym-bridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
contrib/: config.example.toml  ym-bridge.service
docs/: architecture.md  release-checklist.md  reverse-engineering.md  setup-from-zero.md
scripts/: clean_har.py
src/ym_bridge/: __init__.py  __main__.py  app.py  cli.py  config.py  controller.py  ipc.py  models.py  mpris.py  mpv_player.py  provider.py
src/ym_bridge/yandex/: __init__.py  client.py  recon.py
